Bug 802318 - Remove the invalid SkipRoot in AtomizeInline; r=billm

This re-organizes AtomizeInline to separate the TakeOwnership and Copy cases.

--HG--
extra : rebase_source : 2045f8503e7ff0419f992e4268683d1b63d5f094